--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.3",
     "reactstrap": "^9.2.3"
   },
   "devDependencies": {
